crates/runtime/tests/search/snapshots/integration_models__search__arrow-no_vector_engine-no_text_engine-view_union_all_join-vector_search_metadata_megascience_basic_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": "0.73",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "a) $-|-9| = -9$  \nb) $-(-9) = 9$  \nc) $2-(-6) = 2 + 6 = 8$  \nd) $2-|-6| = 2 - 6 = -4$"
        ]
      },
      "primary_key": {
        "id": 708
      }
    },
    {
      "_score": "0.70",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "a. \\( h(7) = -3(7) - 4 = -21 - 4 = \\boxed{-25} \\)\nb. \\( h(-4) = -3(-4) - 4 = 12 - 4 = \\boxed{8} \\)"
        ]
      },
      "primary_key": {
        "id": 255
      }
    },
    {
      "_score": "0.66",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "`(a b c)`, because `(a b c)` is the first S-expression of this non-empty list."
        ]
      },
      "primary_key": {
        "id": 868
      }
    },
    {
      "_score": "0.64",
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "a. \\( G(3) = 3 - 1 = \\boxed{2} \\)\nb. \\( G(-5) = -5 - 1 = \\boxed{-6} \\)\nc. \\( G(0) = 0 - 1 = \\boxed{-1} \\)"
        ]
      },
      "primary_key": {
        "id": 251
      }
    }
  ]
}
