crates/runtime/tests/search/snapshots/integration_models__search__arrow-no_vector_engine-no_text_engine-view_union_all_join-vector_search_metadata_megascience_vector_search_sql_filtered_index_only.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer, 4) WHERE subject != 'math' ORDER BY _score DESC, id"
---
[
  {
    "id": 1015,
    "_score": 0.641
  },
  {
    "id": 821,
    "_score": 0.622
  },
  {
    "id": 449,
    "_score": 0.62
  },
  {
    "id": 1193,
    "_score": 0.602
  }
]
